tools/fleet/fixtures/packets/invalid/unknown-context-sha.case
source=valid-work.packet
mutation=set Context-SHA to UNKNOWN
expected=invalid
